--- a/loan.html
+++ b/loan.html
@@ -824,7 +824,7 @@
                     <i class="fas fa-envelope"></i> Contact
                 </button>
                 <button class="nav-button" onclick="window.location.href='seed.html';">
-                    <i class="fas fa-seedling"></i> Seeds
+                    <i class="fas fa-seedling"></i> Market
                 </button>
                 <button class="nav-button" onclick="window.location.href='worker.html';">
                     <i class="fas fa-users"></i> Labour
