--- a/services.html
+++ b/services.html
@@ -330,7 +330,7 @@
             </a>
             <div class="hidden md:flex space-x-6">
                 <a href="welcome.html" class="nav-link hover:text-emerald-200 transition py-1">Home</a>
-                <a href="seed.html" class="nav-link hover:text-emerald-200 transition py-1">Seeds&Plants</a>
+                <a href="seed.html" class="nav-link hover:text-emerald-200 transition py-1">Market</a>
                 <a href="mounitoring.html" class="nav-link hover:text-emerald-200 transition py-1">Farm mounitoring</a>
                 <a href="worker.html" class="nav-link hover:text-emerald-200 transition py-1">Labour Management</a>
                 <a href="loan.html" class="nav-link hover:text-emerald-200 transition py-1">Loans</a>
@@ -347,7 +347,7 @@
         <div id="mobile-menu" class="hidden bg-emerald-800 md:hidden">
             <div class="container mx-auto px-4 py-3 flex flex-col space-y-3">
                 <a href="welcome.html" class="block text-white py-2 hover:bg-emerald-600 px-3 rounded">Home</a>
-                <a href="seed.html" class="block text-white py-2 hover:bg-emerald-600 px-3 rounded">Seeds&Plants</a>
+                <a href="seed.html" class="block text-white py-2 hover:bg-emerald-600 px-3 rounded">Market</a>
                 <a href="mounitoring.html" class="block text-white py-2 hover:bg-emerald-600 px-3 rounded">Farm mounitoring</a>
                 <a href="worker.html" class="block text-white py-2 hover:bg-emerald-600 px-3 rounded">Labour Management</a>
                 <a href="loan.html" class="block text-white py-2 hover:bg-emerald-600 px-3 rounded">Loans</a>
