--- a/dash.html
+++ b/dash.html
@@ -20,7 +20,7 @@
                 <button onclick="window.location.href='welcome.html';">Home</button>
                 <button onclick="window.location.href='loan.html';">Loans</button>
                 <button onclick="alert('Contact functionality coming soon!')">Contact</button>
-                <button onclick="window.location.href='seed.html';">Seeds</button>
+                <button onclick="window.location.href='seed.html';">Market</button>
                 <button onclick="window.location.href='worker.html';">Labour Management</button>
                 <button onclick="window.location.href='machinary.html';">Machinery</button>
                 <button onclick="window.location.href='export.html';">Export</button>
