--- a/pesticides.html
+++ b/pesticides.html
@@ -387,7 +387,7 @@
     <div class="mobile-menu" id="mobileMenu">
         <div class="flex flex-col space-y-4">
             <a href="welcome.html" class="text-white hover:text-emerald-200 transition">Home</a>
-            <a href="seed.html" class="text-white hover:text-emerald-200 transition">Seeds & Plants</a>
+            <a href="seed.html" class="text-white hover:text-emerald-200 transition">Market</a>
             <a href="mounitoring.html" class="text-white hover:text-emerald-200 transition">Farm Monitoring</a>
             <a href="worker.html" class="text-white hover:text-emerald-200 transition">Labour Management</a>
             <a href="loan.html" class="text-white hover:text-emerald-200 transition">Loans</a>
@@ -409,7 +409,7 @@
 
             <div class="hidden md:flex space-x-6">
                 <a href="welcome.html" class="nav-link hover:text-emerald-200 transition">Home</a>
-                <a href="seed.html" class="nav-link hover:text-emerald-200 transition">Seeds&Plants</a>
+                <a href="seed.html" class="nav-link hover:text-emerald-200 transition">Market</a>
                 <a href="mounitoring.html" class="nav-link hover:text-emerald-200 transition">Farm Monitoring</a>
                 <a href="worker.html" class="nav-link hover:text-emerald-200 transition">Labour Management</a>
                 <a href="loan.html" class="nav-link hover:text-emerald-200 transition">Loans</a>
