--- a/welcome.html
+++ b/welcome.html
@@ -857,7 +857,7 @@
                     <i class="fas fa-envelope"></i> <span class="nav-text" data-key="contact">Contact</span>
                 </button>
                 <button class="nav-button" onclick="window.location.href='seed.html';">
-                    <i class="fas fa-seedling"></i> <span class="nav-text" data-key="seeds">Seeds</span>
+                    <i class="fas fa-seedling"></i> <span class="nav-text" data-key="Market">Market</span>
                 </button>
                 <button class="nav-button" onclick="window.location.href='worker.html';">
                     <i class="fas fa-users"></i> <span class="nav-text" data-key="labour">Labour</span>
@@ -1002,7 +1002,7 @@
             </div>
             <div class="feature-card">
                 <i class="fas fa-seedling"></i>
-                <h3 data-key="seeds-plants">Seeds & Plants</h3>
+                <h3 data-key="seeds-plants">Market</h3>
                 <p data-key="seeds-plants-desc">Quality seeds and lab-grown plants sourced from trusted suppliers</p>
             </div>
             <div class="feature-card">
