--- a/seeds.html
+++ b/seeds.html
@@ -474,7 +474,7 @@
             <div class="product-card bg-white overflow-hidden relative" data-category="fruits">
                 <div class="product-badge badge-anim">Best Seller</div>
                 <div class="overflow-hidden">
-                    <img src="AgriLift/mangoes.jpg" alt="Lab-Grown Lettuce"
+                    <img src="AgriLift/types of seeds/Mango.png" alt="Lab-Grown Lettuce"
                         class="w-full h-56 object-cover">
                 </div>
                 <div class="p-5">
@@ -509,7 +509,7 @@
             <!-- Product Card: Spices -->
             <div class="product-card bg-white overflow-hidden relative" data-category="Spices">
                 <div class="overflow-hidden">
-                    <img src="AgriLift/cumin.jpeg" alt="Lab-Grown Orchid"
+                    <img src="AgriLift/types of seeds/cummin.jpg" alt="Lab-Grown Orchid"
                         class="w-full h-56 object-cover">
                 </div>
                 ''
@@ -540,7 +540,7 @@
             <div class="product-card bg-white overflow-hidden relative" data-category="fruits">
                 <div class="product-badge badge-anim">New</div>
                 <div class="overflow-hidden">
-                    <img src="AgriLift/Strawberry.jpg" alt="Lab-Grown Strawberry"
+                    <img src="AgriLift/types of seeds/STARWBERRIES.jpg" alt="Lab-Grown Strawberry"
                         class="w-full h-56 object-cover">
                 </div>
                 <div class="p-5">
@@ -568,7 +568,7 @@
             <!-- Product Card: Herbal -->
             <div class="product-card bg-white overflow-hidden relative" data-category="Herbal">
                 <div class="overflow-hidden">
-                    <img src="AgriLift/Tulasi.jpg" alt="Lab-Grown Aloe Vera"
+                    <img src="AgriLift/types of seeds/Tulasi.webp" alt="Lab-Grown Aloe Vera"
                         class="w-full h-56 object-cover">
                 </div>
                 <div class="p-5">
@@ -595,7 +595,7 @@
             <!-- Product Card: fruits -->
             <div class="product-card bg-white overflow-hidden relative" data-category="fruits">
                 <div class="overflow-hidden">
-                    <img src="AgriLift/watermellon.avif" alt="Lab-Grown Tomato"
+                    <img src="AgriLift/types of seeds/watermelon.webp" alt="Lab-Grown Tomato"
                         class="w-full h-56 object-cover">
                 </div>
                 <div class="p-5">
@@ -622,7 +622,7 @@
             <!-- Product Card: Spices -->
             <div class="product-card bg-white overflow-hidden relative" data-category="Spices">
                 <div class="overflow-hidden">
-                    <img src="AgriLift/BlackPepper.webp" alt="Lab-Grown Succulent"
+                    <img src="AgriLift/types of seeds/Black Pepper.jpg" alt="Lab-Grown Succulent"
                         class="w-full h-56 object-cover">
                 </div>
                 <div class="p-5">
@@ -649,7 +649,7 @@
             <!-- Product Card: fruits -->
             <div class="product-card bg-white overflow-hidden relative" data-category="fruits">
                 <div class="overflow-hidden">
-                    <img src="AgriLift/can-you-eat-kiwi-skin.webp" alt="Lab-Grown Blueberry"
+                    <img src="AgriLift/types of seeds/Kiwi.jpg"Lab-Grown Blueberry"
                         class="w-full h-56 object-cover">
                 </div>
                 <div class="p-5">
@@ -677,7 +677,7 @@
             <div class="product-card bg-white overflow-hidden relative" data-category="Herbal">
                 <div class="product-badge badge-anim">Popular</div>
                 <div class="overflow-hidden">
-                    <img src="AgriLift/FLAX SEEDS.jpg" alt="Lab-Grown Echinacea"
+                    <img src="AgriLift/types of seeds/Flaxseeds.webp" alt="Lab-Grown Echinacea"
                         class="w-full h-56 object-cover">
                 </div>
                 <div class="p-5">
@@ -704,7 +704,7 @@
             <!-- Product Card: Herbs -->
             <div class="product-card bg-white overflow-hidden relative" data-category="fruits">
                 <div class="overflow-hidden">
-                    <img src="AgriLift/pomegranate.jpeg" alt="Lab-Grown Basil"
+                    <img src="AgriLift/types of seeds/Pomegranate.jpg" alt="Lab-Grown Basil"
                         class="w-full h-56 object-cover">
                 </div>
                 <div class="p-5">
@@ -733,7 +733,7 @@
             <div class="product-card bg-white overflow-hidden relative" data-category="Spices">
                 <div class="product-badge badge-anim">Limited</div>
                 <div class="overflow-hidden">
-                    <img src="AgriLift/cloves_2.jpg" alt="Lab-Grown Bonsai"
+                    <img src="AgriLift/types of seeds/Cloves.jpg" alt="Lab-Grown Bonsai"
                         class="w-full h-56 object-cover">
                 </div>
                 <div class="p-5">
