--- a/seed.html
+++ b/seed.html
@@ -665,7 +665,7 @@
                 </div>
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="AgriLift/lab grown plants/seeeeeeeeeee.webp" alt="Advanced Hybrid Seeds">
+                        <img src="https://media.istockphoto.com/id/485089124/photo/soy-beans.jpg?s=612x612&w=0&k=20&c=7PLs_C3WY5E-KMu90aQpIOpkrV1kdH1gBiu0Jw5ICG4=" alt="Advanced Hybrid Seeds">
                     </div>
                     <div class="product-content">
                         <h3 class="product-title">Advanced Hybrid Seeds</h3>
@@ -675,7 +675,7 @@
                 </div>
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="AgriLift/lab grown plants/down-to-earth_import_library_large_2022-09-07_0.96427400_1662545843_compost.avif" alt="Organic Fertilizers">
+                        <img src="https://media.istockphoto.com/id/686498390/photo/farmer-harvesting-rice.jpg?s=612x612&w=0&k=20&c=ExaH19vhnyrNUd-NcH0aYhev48pfgwwvPgoS9iveUPA=" alt="Organic Fertilizers">
                     </div>
                     <div class="product-content">
                         <h3 class="product-title">Organic Fertilizers</h3>
@@ -690,7 +690,7 @@
                     <div class="product-content">
                         <h3 class="product-title">Bio-Safe Pesticides</h3>
                         <p class="product-description">Innovative, environmentally responsible pest control solutions that protect crops without harmful chemical residues.</p>
-                        <a href="pe" class="btn-primary">Buy Pesticides <i class="fas fa-arrow-right"></i></a>
+                        <a href="pesticides.html" class="btn-primary">Buy Pesticides <i class="fas fa-arrow-right"></i></a>
                     </div>
                 </div>
             </div>
